added links to foli client and winterstars' texturepack

--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
 								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Group Picture at Atlas - Dec. 2020" alt="" /></a>
 							</article>
 						</div>
+					
+					<strong>Non-Minecraft Projects</strong>
+					<p>We've also done a couple projects outside the game!</p>
+					<ul>
+						<li><a href="https://foliclient.astral.vip">Foli Client Website</a></li>
+						<li><a href="https://cdn.discordapp.com/attachments/792600964028432394/854571435204935740/WinterStars_Pack_1.16.4.zip">Download WinterStars' Texture Pack</a></li>
+						<li><a href="https://github.com/ablazingeboy/rem-os">This degeneracy</a></li>
+					</ul>
 
 				</div>
 			</section>
