--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Astral 2021</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Astral 2021</li><li>Wake the fuck up boys, we are going to the fucking stars.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
