--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<h1>Astral</h1>
 				<nav>
 					<ul>
-						<li><a href="#one">What We Do</a></li>
+						<li><a href="#one">About Astral</a></li>
 						<li><a href="#two">Who We Are</a></li>
 						<li><a href="#work">Our Work</a></li>
 					</ul>
@@ -42,13 +42,23 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What We Do</h2>
+						<h2>About Astral</h2>
 					</header>
 					<p><strong>We build shit.</strong> Stupidly impressive shit that only masochists would do. Need an entire End island mined out and rebuilt in another dimension? <strong>We've done it twice.</strong></p>
+					<strong>Members:</strong>
+					<ul>
+						<li>Winterstars</li>
+						<li>TheDoctor7562</li>
+						<li>exgodstatus</li>
+						<li>iiEthan</li>
+						<li>cheeeeca</li>
+						<li>ABlazingEBoy</li>
+						<li>Wtnaut</li>
+					</ul>
 				</div>
 			</section>
 
-		<!-- Two -->
+		<!--
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
@@ -67,13 +77,26 @@
 					</ul>
 				</div>
 			</section>
+		-->
+
+
+			<section id="two" class="main style2 left dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>Our Latest Project - <strong>Eternity</strong></h2>
+					</header>
+					<p><strong>Eternity.</strong> The idea of eternity is not truly comprehensible by humans. The idea that something can go on, and on, and on, forever. Something else that is not truly comprehensible is <strong>how much fucking time we spent on this stupid thing.</strong> That being said, it is quite beautiful, isn't it. We aren't just going to the stars, we've <strong>built the damn stars.</strong><br />
+					<br />
+					Eternity is a 6x3 mapart of the picture <i>Pillars of Creation</i>, an image of the Eagle Nebula captured by the Hubble Space Telescope. It's truly breathtaking image.</p>
+				</div>
+			</section>
 
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>Our Work</h2>
-						<p>Astral has been around for almost an entire year, and during that time we've accomplished <strong>a lot.</strong> Here's a few examples.</p>
+						<p>Astral has been around for almost an entire year, and during that time we've accomplished <strong>a lot.</strong> Here's a few examples:</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -95,6 +118,12 @@
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Group Picture at Atlas - Dec. 2020" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" title="Eternity - Jun. 2021" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" title="Group Picture with Eternity - Jun. 2021" alt="" /></a>
 							</article>
 						</div>
 					
