--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					</header>
 					<p><strong>Eternity.</strong> The idea of eternity is not truly comprehensible by humans. The idea that something can go on, and on, and on, forever. Something else that is not truly comprehensible is <strong>how much fucking time we spent on this stupid thing.</strong> That being said, it is quite beautiful, isn't it. We aren't just going to the stars, we've <strong>built the damn stars.</strong><br />
 					<br />
-					Eternity is a 6x3 mapart of the picture <i>Pillars of Creation</i>, an image of the Eagle Nebula captured by the Hubble Space Telescope. It's truly breathtaking image.</p>
+					Eternity is a 6x3 mapart of the picture <i>Mystic Mountains</i>, an image of the Carina Nebula captured by the Hubble Space Telescope. It's truly breathtaking image.</p>
 				</div>
 			</section>
 
