added dasnk n limmy

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 						<li>cheeeeca</li>
 						<li>ABlazingEBoy</li>
 						<li>Wtnaut</li>
+						<li>DankTurtleMaster</li>
+						<li>LimeishPingu</li>
 					</ul>
 				</div>
 			</section>
