Added RemOS 2 page

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<ul>
 						<li><a href="https://foliclient.astral.vip">Foli Client Website</a></li>
 						<li><a href="https://cdn.discordapp.com/attachments/792600964028432394/854571435204935740/WinterStars_Pack_1.16.4.zip">Download WinterStars' Texture Pack</a></li>
-						<li><a href="https://github.com/ablazingeboy/rem-os">This degeneracy</a></li>
+						<li><a href="https://astral.vip/rem-os.html">This degeneracy</a></li>
 					</ul>
 
 				</div>
