--- a/rem-os.html
+++ b/rem-os.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
         <title>remOS 2</title>
+        <link rel="shortcut icon" type="image/png" href="images/rem-os/favicon.png"/>
         <style>
             .box {
               width: 30%;
