--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 						<li>Wtnaut</li>
 						<li>DankTurtleMaster</li>
 						<li>LimeishPingu</li>
+						<li>sigma_trombone</li>
 					</ul>
 				</div>
 			</section>
@@ -98,7 +99,7 @@
 				<div class="content">
 					<header>
 						<h2>Our Work</h2>
-						<p>Astral has been around for almost an entire year, and during that time we've accomplished <strong>a lot.</strong> Here's a few examples:</p>
+						<p>Astral has been around for over a year, and during that time we've accomplished <strong>a lot.</strong> Here's a few examples:</p>
 					</header>
 
 					<!-- Gallery  -->
