--- a/rem-os/index.html
+++ b/rem-os/index.html
@@ -36,7 +36,7 @@
         <p><img src="images/rem-os/rem4.jpg" referrerpolicy="no-referrer" alt="rem4"></p>
         <p>&quot;Busy&quot; screenshot with Micro and Firefox</p>
         <p><img src="images/rem-os/rem5.jpg" referrerpolicy="no-referrer" alt="rem5"></p>
-        <p>Yes, it runs Minecraft (The 9 FPS was due to being in a VM, and even getting that much is a testament to how lightweight RemOS 2 is and the performance benefits from one of my other projects, <a href='foliclient.astral.vip'>Foli Client</a>).</p>
+        <p>Yes, it runs Minecraft (The 9 FPS was due to being in a VM, and even getting that much is a testament to how lightweight RemOS 2 is and the performance benefits from one of my other projects, <a href='foliclient.github.io'>Foli Client</a>).</p>
         
         <h2 id='downloads'>Downloads</h2>
         <h3 id='x8664'>x86_64</h3>
