--- a/rem-os/index.html
+++ b/rem-os/index.html
@@ -27,15 +27,15 @@
         <p>RemOS 2 is a spin of Void Linux, and as such the install process is identical to mainline Void. Download the iso <a href=#downloads>below</a>, then follow the <a href='https://docs.voidlinux.org/installation/live-images/guide.html'>Void Installation Guide</a>. <strong>On the &quot;Source&quot; page, make sure to select Local, not Network</strong>.</p>
         
         <h2 id='can-i-see-some-screenshots'>Can I see some screenshots?</h2>
-        <p><img src="images/rem-os/rem1.jpg" referrerpolicy="no-referrer" alt="rem1" style="zoom:50%;"></p>
+        <p><img src="/images/rem-os/rem1.jpg" referrerpolicy="no-referrer" alt="rem1" style="zoom:50%;"></p>
         <p>ufetch at idle (Note that the high RAM usage is because VirtualBox Guest Additions were running, prior to enabling them the idle usage was 204mb).</p>
-        <p><img src="images/rem-os/rem2.jpg" referrerpolicy="no-referrer" alt="rem2"></p>
+        <p><img src="/images/rem-os/rem2.jpg" referrerpolicy="no-referrer" alt="rem2"></p>
         <p>Lock Screen</p>
-        <p><img src="images/rem-os/rem3.jpg" referrerpolicy="no-referrer" alt="rem3"></p>
+        <p><img src="/images/rem-os/rem3.jpg" referrerpolicy="no-referrer" alt="rem3"></p>
         <p>PCManFM and Alacritty (The rem pixel art is a bit scuffed on HiDPI displays)</p>
         <p><img src="images/rem-os/rem4.jpg" referrerpolicy="no-referrer" alt="rem4"></p>
         <p>&quot;Busy&quot; screenshot with Micro and Firefox</p>
-        <p><img src="images/rem-os/rem5.jpg" referrerpolicy="no-referrer" alt="rem5"></p>
+        <p><img src="/images/rem-os/rem5.jpg" referrerpolicy="no-referrer" alt="rem5"></p>
         <p>Yes, it runs Minecraft (The 9 FPS was due to being in a VM, and even getting that much is a testament to how lightweight RemOS 2 is and the performance benefits from one of my other projects, <a href='foliclient.github.io'>Foli Client</a>).</p>
         
         <h2 id='downloads'>Downloads</h2>
