--- a/rem-os/index.html
+++ b/rem-os/index.html
@@ -33,7 +33,7 @@
         <p>Lock Screen</p>
         <p><img src="/images/rem-os/rem3.jpg" referrerpolicy="no-referrer" alt="rem3"></p>
         <p>PCManFM and Alacritty (The rem pixel art is a bit scuffed on HiDPI displays)</p>
-        <p><img src="images/rem-os/rem4.jpg" referrerpolicy="no-referrer" alt="rem4"></p>
+        <p><img src="/images/rem-os/rem4.jpg" referrerpolicy="no-referrer" alt="rem4"></p>
         <p>&quot;Busy&quot; screenshot with Micro and Firefox</p>
         <p><img src="/images/rem-os/rem5.jpg" referrerpolicy="no-referrer" alt="rem5"></p>
         <p>Yes, it runs Minecraft (The 9 FPS was due to being in a VM, and even getting that much is a testament to how lightweight RemOS 2 is and the performance benefits from one of my other projects, <a href='foliclient.github.io'>Foli Client</a>).</p>
